--- a/SakabaWeb/Views/Home/Index.cshtml
+++ b/SakabaWeb/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     自作のボスモンスターを使ってオリジナル設定を披露してみませんか？<br />
     <ul>
         <li>指定したライフポイントの値だけ返信(@@bossを含むトゥート)される、または30分経過で終了となります。</li>
-        <li>ボス出現中に登録されると出現中のボスは消えてしまうため、タイムライン上でそれとなく確認していただけると助かります。</li>
+        <li>ボスモンスター出現は同時に1体までのため、出現中に登録した場合は入力画面に戻ります。</li>
         <li>エラーにより入力が消える恐れがあるので、メモ帳などで作成してから貼り付けるのを推奨します。</li>
     </ul>
 </p>
@@ -86,7 +86,7 @@
                 @Html.ValidationMessageFor(model => model.LifePoint, "", new { @class = "text-danger" })
                 <div>
                     リプライによるダメージを何回与えれば倒せるかを指定します。<br />
-                    設定が高いと倒せなくなる恐れがあるので注意してください（TLの人数×3程度を推奨）。
+                    設定が高いと倒せなくなる恐れがあるので注意してください（TLの人数×2～3程度を推奨）。
                 </div>
             </div>
         </div>
